cf_analysis_results/checkerframework_3.42.0_results/url8b434243b7_ondrasej_GPlan_tgz-pJ8-PlanningProblemTestJ8.txt
../dataset/june2020_dataset/url8b434243b7_ondrasej_GPlan_tgz-pJ8-PlanningProblemTestJ8/src/cz/matfyz/sykora/planning/Planner.java:70: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to problem.initialize(new FileReader(file)) with exception type java.io.IOException $$ ( 2211, 2231 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
			problem.initialize(new FileReader(file));
			                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to problem.initialize(new FileReader(file)) with exception type java.io.IOException
1 error
